--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>MoveUp</title>
-    <link href="dist/output.css" rel="stylesheet">
-  </head>
-  <body>
-    <h1 class="text-3xl font-bold underline">
-      Hello MoveUp!
-    </h1>
-    <script src="renderer.js"></script>
-  </body>
+<head>
+  <title>MoveUp</title>
+  <link href="dist/output.css" rel="stylesheet">
+</head>
+<body>
+  <h1 class="text-3xl font-bold underline">Hello MoveUp!</h1>
+  <button id="triggerFloatingWindow" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Show Floating Window</button>
+  <script src="renderer.js"></script>
+</body>
 </html>
