WIP React + Vite + demo views

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -1,11 +1,10 @@
 <!doctype html>
 <html>
-  <head>
-    <title>MovsdaseUp</title>
+  <head>asap2</title>
     <script type="module" src="./renderer.tsx"></script>
   </head>
   <body>
-    sdas
+    sdasds
     <div id="root"></div>
   </body>
 </html>
